apps/base/monitoring-nginx-log-exporter/deploy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-nginx-log-exporter
spec:
  policyTypes: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: nginx-log-exporter
      app.kubernetes.io/component: nginx-log-exporter

  ingress:
    # Allow from prometheus
    - ports:
        - port: metrics
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/component: prometheus
              app.kubernetes.io/instance: k8s
              app.kubernetes.io/name: prometheus
